--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #874fff;
+  --ifm-color-primary-dark: #7141d8;
+  --ifm-color-primary-darker: #5d36b3;
+  --ifm-color-primary-darkest: #492a8d;
+  --ifm-color-primary-light: #8f5ef8;
+  --ifm-color-primary-lighter: #a07af1;
+  --ifm-color-primary-lightest: #ac8dee;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #41ff54;
+  --ifm-color-primary-dark: #3be74c;
+  --ifm-color-primary-darker: #31d141;
+  --ifm-color-primary-darkest: #28b136;
+  --ifm-color-primary-light: #66e973;
+  --ifm-color-primary-lighter: #78f084;
+  --ifm-color-primary-lightest: #88e692;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
